src/Post.css
.post-container {
    display: flex;
    flex-direction: column;
}

.post-actions {
    margin-top: 10px;
    display: flex;
    flex-direction: row;
}

.post-date {
    flex-grow: 1;
    justify-content: left;
}

.post-btns {
    flex-grow: 1;
    justify-content: right;
}

.post-btns * {
    cursor: pointer;
    margin-left: 10px;
}

.done {
    font-size: 22px;
}

.done:first-child {
    margin-right: 5px;
}

